# PointNet_Custom_Object_Detection

./: PREPARE_DATA.md  README.md  provider.py  ros_inference.py  test.ipynb  train.ipynb
.ipynb_checkpoints/: main-checkpoint.ipynb  test-checkpoint.ipynb  train-checkpoint.ipynb
log/: log_train.txt  model.ckpt.index
log/test/: events.out.tfevents.1578275509.atas-G7-7590  events.out.tfevents.1578277077.atas-G7-7590  events.out.tfevents.1578277671.atas-G7-7590  events.out.tfevents.1578278060.atas-G7-7590  events.out.tfevents.1578278099.atas-G7-7590  events.out.tfevents.1578278443.atas-G7-7590  events.out.tfevents.1578278537.atas-G7-7590  events.out.tfevents.1578278617.atas-G7-7590  events.out.tfevents.1578279461.atas-G7-7590  events.out.tfevents.1578279610.atas-G7-7590
log/train/: events.out.tfevents.1578275498.atas-G7-7590
scripts/: CMakeLists.txt  augment_real_data.py  convert_pcd2ply.cpp  visualize_pyh5_data.py  write_numpy_array.py  write_pyh5_dataset.py  write_pyh5_real.py
